force-app/main/default/objects/Message__c/fields/TAG_NotificationExternalId__c.field-meta.xml
<CustomField>
    <fullName>TAG_NotificationExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Notification External Id</label>
    <length>48</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>