force-app/main/default/objects/Message__c/fields/TAG_NotificationOppgaveId__c.field-meta.xml
<CustomField>
    <fullName>TAG_NotificationOppgaveId__c</fullName>
    <label>NotificationOppgaveId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>