force-app/main/default/objects/Message__c/fields/TAG_NotificationSMSExternalId__c.field-meta.xml
<CustomField>
    <fullName>TAG_NotificationSMSExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Notification SMS External Id</label>
    <length>48</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>