force-app/main/default/objects/Message__c/fields/TAG_OldUnreadMsgExtern__c.field-meta.xml
<CustomField>
    <fullName>TAG_OldUnreadMsgExtern__c</fullName>
    <formula>AND(NOT(CRM_Read__c), DATETIMEVALUE(CreatedDate + (60/1440)) &lt;  DATETIMEVALUE( NOW() ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old unread msg extern</label>
    <type>Checkbox</type>
</CustomField>